aタグの追加

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
     <nav class="header-nav">
         <li class="header-nav_list">
-            <ul class="header-nav_item">aaaaa</ul>
+            <ul class="header-nav_item"><a href="" class="nav_link">aaaaa</a></ul>
         </li>
     </nav>
 </footer>
