--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <nav class="header-nav">
         <li class="header-nav_list">
             <ul class="header-nav_item"><a href="" class="nav_link">aaaaa</a></ul>
+            <ul class="header-nav_item"><a href="" class="nav_link">aaaaa</a></ul>
+            <ul class="header-nav_item"><a href="" class="nav_link">aaaaa</a></ul>
+            <ul class="header-nav_item"><a href="" class="nav_link">aaaaa</a></ul>
+            <ul class="header-nav_item"><a href="" class="nav_link">aaaaa</a></ul>
         </li>
     </nav>
 </footer>
