最後のナビアイテムの追加

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
             <ul class="header-nav_item"><a href="" class="nav_link">aaaaa</a></ul>
             <ul class="header-nav_item"><a href="" class="nav_link">aaaaa</a></ul>
             <ul class="header-nav_item"><a href="" class="nav_link">aaaaa</a></ul>
-            <ul class="header-nav_item"><a href="" class="nav_link">aaaaa</a></ul>
+            <ul class="header-nav_item"><a href="https://google.com" class="nav_link">aaaaa</a></ul>
         </li>
     </nav>
 </footer>
